fixed case-studies headers not showing up and added new alberto animation

--- a/_/components/scss/_utils.scss
+++ b/_/components/scss/_utils.scss
@@ -20,6 +20,21 @@ font-family: neusa-semi-bold;
 src: url(../../main/fonts/The_Northern_Block-Neusa-SemiBold.otf);
 }
 
+/* Generated by Font Squirrel (http://www.fontsquirrel.com) on August 14, 2014 */
+
+
+
+@font-face {
+    font-family: 'neusasemibold';
+    src: url('the_northern_block_-_neusa-semibold-webfont.eot');
+    src: url('the_northern_block_-_neusa-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('the_northern_block_-_neusa-semibold-webfont.woff') format('woff'),
+         url('the_northern_block_-_neusa-semibold-webfont.ttf') format('truetype'),
+         url('the_northern_block_-_neusa-semibold-webfont.svg#neusasemibold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 // Variables
 
 $darkblue         :#3D4C53;
