--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -67,6 +67,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 @font-face {
   font-family: neusa-semi-bold;
   src: url(../../main/fonts/The_Northern_Block-Neusa-SemiBold.otf); }
+/* Generated by Font Squirrel (http://www.fontsquirrel.com) on August 14, 2014 */
+@font-face {
+  font-family: 'neusasemibold';
+  src: url("the_northern_block_-_neusa-semibold-webfont.eot");
+  src: url("the_northern_block_-_neusa-semibold-webfont.eot?#iefix") format("embedded-opentype"), url("the_northern_block_-_neusa-semibold-webfont.woff") format("woff"), url("the_northern_block_-_neusa-semibold-webfont.ttf") format("truetype"), url("the_northern_block_-_neusa-semibold-webfont.svg#neusasemibold") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 /* line 14, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/susy-2.1.3/sass/susy/language/susy/_box-sizing.scss */
 *, *:before, *:after {
   -moz-box-sizing: border-box;
